frontend/src/components/CameraRoll/CameraRoll.css
html {
    margin: 0;
    padding: 0;
    font-family: Proxima Nova,helvetica neue,helvetica,arial,sans-serif;
    /* caret-color: rgba(0,0,0,0); fix blinking cursor */
}

body {
    padding-top: 60px;
    font-family: Proxima Nova,helvetica neue,helvetica,arial,sans-serif;
    margin: 0;

}






.image-cameraroll-container {
    height: 140px;
    width: 140px;
    margin: 5px;
    box-sizing: border-box;
    transition: .2s;



}
.image-cameraroll-container:hover {
    outline: 3px solid #62beec;
    filter: brightness(90%);

}

.image-cameraroll {
    width:100%;
    height:100%;
}


.all-cameraroll-images{
    display: flex;
    width: auto;
    height: 70vh;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 10px 70px;

    background-color: rgba(243,245,246,255) ;

}
.all-cameraroll-images2{
    display: flex;
    width: auto;
    height: 60vh; /*fill blank space*/
    flex-direction: row;
    justify-content: center;
    align-items: center;



    background-color: rgba(243,245,246,255) ;

}
.cameraroll-main {
    height: 100%;
}


.banner-cameraroll{
    width: 100%;
    height: 250px;
    background-image: url(https://images4.alphacoders.com/121/thumb-1920-121336.jpg);
    background-size: cover;
    display: flex;
    flex-direction: row;
    position: relative;
    z-index: -1;
}
#cameraroll-username{
    font-size: 36px;
    line-height: 44px;
    color: white;
    font-weight: 300;
    position: absolute;
    bottom: 0;
    margin-left: 70px;
}
.cameraroll-label{
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 10px 0;
    background-color: white;
    font-size: 12pt;
    font-weight: 400;
    border-bottom: solid 1px #e1e1e1; ;

}

#cameraroll-photocount {
    color: white;
    position: absolute;
    bottom: 20px;
    right: 30px;
}

#emptyMessage{
    font-size: 24px;
  line-height: 30px;
  font-weight: 300;

}
#emptyMessage2{
    font-size: 18px;
  line-height: 30px;
  font-weight: 300;
  margin-bottom: 10px;

}

.empty-cameraroll{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-self: center;
    margin-top: 5px;

}

#to-upload-bttn {
    text-decoration: none;
    color: white;

}

